# wordle_solver

./: .env  Cargo.toml  README.md  populate.py
migrations/2022-03-20-085354_create_words/: down.sql  up.sql
migrations/2022-03-20-085623_create_words_index/: up.sql
src/: api.rs  database.rs  main.rs  models.rs  scanner.rs  schema.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.tsx
ui/src/header/: navbar.tsx
ui/src/home/: index.tsx
