[package]
name = "wordle_solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4", features = ['sqlite']}
libsqlite3-sys = { version = "0.24.2", optional = true, features = ["bundled"] }