[package]
name = "wordle_solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0", features = ['sqlite'] }
libsqlite3-sys = { version = "0.25", optional = true, features = ["bundled"] }
actix-web = { version = "4.2" }
serde_derive = "1"
serde= "1"
actix-cors = "0.6"
env_logger = "0.9"